<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@color/white"

    >




    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/login"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/outlinedTextField"
        app:layout_constraintTop_toBottomOf="@id/logo"
        android:layout_margin="20sp"
        app:endIconMode="clear_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/Email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/outlinedTextField2"
        app:layout_constraintTop_toBottomOf="@id/outlinedTextField"
        android:layout_margin="20sp"
        app:endIconMode="password_toggle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            />

    </com.google.android.material.textfield.TextInputLayout>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/sing_in_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:fontFamily="@font/bebas_neue"
        android:text="@string/sing_in"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textAllCaps="false"
        android:background="@drawable/btn_bg"
        app:layout_constraintTop_toBottomOf="@id/outlinedTextField2"
        tools:layout_editor_absoluteX="20dp" />

    <TextView
        android:id="@+id/create_account_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        android:fontFamily="@font/bebas_neue"
        android:text="@string/don_t_have_an_account_create_account"
        app:layout_constraintTop_toBottomOf="@id/sing_in_btn"
        android:layout_margin="20dp"

        />

</androidx.constraintlayout.widget.ConstraintLayout>