<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:background="@color/white"
    >


    <ScrollView

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">



            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/logo"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                app:layout_constraintTop_toTopOf="parent"
                android:src="@drawable/registration"
                />


            <LinearLayout
                android:id="@+id/countryLayout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/logo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                xmlns:tools="http://schemas.android.com/tools"
                tools:layout_editor_absoluteY="0dp"
                tools:layout_editor_absoluteX="8dp"
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="vertical"
                android:padding="20dp">

                <EditText
                    android:id="@+id/countryCode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:text="Code" />

                <EditText
                    android:id="@+id/countryName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:text="Name" />

                <EditText
                    android:id="@+id/countryDialCode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:text="Dial Code" />

                <ImageView
                    android:id="@+id/countryIcon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <androidx.appcompat.widget.AppCompatButton

                    android:id="@+id/showCountry"
                    android:background="@drawable/btn_bg"
                    android:textColor="@color/white"
                    android:text="Open Country Picker"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </LinearLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/outlinedTextField"
                app:layout_constraintTop_toBottomOf="@id/countryLayout"
                android:layout_margin="20sp"
                app:endIconMode="clear_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/Name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    />

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/outlinedTextField2"
                app:layout_constraintTop_toBottomOf="@id/outlinedTextField"
                android:layout_margin="20sp"
                app:endIconMode="clear_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/Phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/outlinedTextField3"
                app:layout_constraintTop_toBottomOf="@id/outlinedTextField2"
                android:layout_margin="20sp"
                app:endIconMode="clear_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/Email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/outlinedTextField4"
                app:layout_constraintTop_toBottomOf="@id/outlinedTextField3"
                android:layout_margin="20sp"
                app:endIconMode="password_toggle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/sing_up_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/btn_bg"
                android:fontFamily="@font/bebas_neue"
                android:text="@string/sing_up"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintTop_toBottomOf="@id/outlinedTextField4"
                tools:layout_editor_absoluteX="20dp" />

            <TextView
                android:id="@+id/alrady_account_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                android:fontFamily="@font/bebas_neue"
                android:text="@string/already_have_an_account_sing_in"
                app:layout_constraintTop_toBottomOf="@id/sing_up_btn"
                android:layout_margin="20dp"/>








        </androidx.constraintlayout.widget.ConstraintLayout>




    </ScrollView>


        />

</androidx.constraintlayout.widget.ConstraintLayout>